# clinicalguard

./: .env.example  .gitignore  CLINICAL_SAFETY_POLICY.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 179b55d4741a_add_condition_investigations_table.py  78cd60aef718_stage_1_add_eval_cases_columns_for_nstg_.py  8c08d51075d1_add_eval_cases_table.py  9774279ddb55_add_eval_cases_table.py  a63bcbcd6882_initial_schema_baseline.py
clinicalguard/: config.py
clinicalguard/db/: migrate.py  models.py  session.py
clinicalguard/evaluation/: measure_correlation.py  measure_variance.py
clinicalguard/ingestion/: embeddings.py  nstg.py  run_embeddings.py  run_ingestion.py
clinicalguard/models/: cds.py  eval.py
clinicalguard/retrieval/: cds_engine.py  eval_scorer.py  generate_eval_cases.py  hybrid.py  seed_nstg_cases.py
clinicalguard/safety/: engine.py  seed_rules.py
docs/: methodology.md
docs/adr/: 001-database-choice.md  002-raw-json-storage.md  003-adapter-pattern.md  004-treatment-drug-phase1.md  005-tiered-human-verification.md  006-findings-subtype-column.md  007-embeddings-separate-table.md  008-test-database-strategy.md  009-embedding-strategy.md  010-no-chunking.md  011-hybrid_retrieval_rrf.md  012-retrieval_limitations _and_phase3benchmark_plan.md  013-phase2-scope-and-sequencing.md  014-safety-rule-design.md  015-organization-specific-rules.md  016-safety-engine-design.md  (+3 more)
evaluation/: dimension_correlation_2026-04-23.json  variance_report_2026-04-23.json
ingestion/: nstg.py
(+11 files in other folders)
