[project]
name = "clinicalguard"
version = "0.1.0"
description = "Clinical AI safety infrastructure"
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2",
    "openai>=1.0",
    "anthropic>=0.20",
    "httpx>=0.27",
    "huggingface-hub>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]